<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/a"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ay4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity3Button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sayfaGecisiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ay1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/yaziSayfasiButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/yaziSayfasiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/sayfaGecisiButton"
        android:text="@string/ay2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity3Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sayfaGecisiButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ay3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/finishButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yaziSayfasiButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/contextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ay5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonListeGitme"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yaziSayfasiButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonListeGitme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/ay6"
        app:layout_constraintEnd_toStartOf="@+id/buttonFragment"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/contextButton"
        app:layout_constraintTop_toTopOf="@id/contextButton" />

    <com.info.sayfalararasiveritasima.FatihAbiNesne.WifiCubugu
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <Button
        android:id="@+id/buttonFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ay7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonListeGitme"
        app:layout_constraintTop_toTopOf="@id/buttonListeGitme" />


</androidx.constraintlayout.widget.ConstraintLayout>